Current:
 * Many bugfixes for the display code
 * The desktop integration files now adher to the newest standards
 * Refactoring in order to make the code easier to understand.
 * Spelling fixes
 * Shipped around a wxWidgets <3.1 bug for embedding bitmaps in svg
 * Many Links were updated to https
 * A better help file detection that still works if there is no .hhp file.

18.12.0:
  * Use C++'s strong typing for more enums.
  * Another big SpeedUp.
  * Now we make sure that the Manifest telling wxMaxima is high-DPI aware is
    the only manifest packaged with the .exe file.
  * Tried to simplify the display code
  * Source file and function names that more closely their current meaning.
  * Many bug fixes.
  * Now we pass the canonical locale name to maxima, not the short one.
  * We no more try to set maxima's locale if it doesn't differ from the system's
    default one.

18.11.2:
  * Better horizontal spacing of cells that are wider than lines

18.11.1:
  * Better horizontal spacing of headings.

18.11.0:
  * GTK3 Compatibility
  * Worked around C compiler bugs that truncated the beginning of long strings
  * Zoom gestures for more computers
  * A better lisp mode
  * Limit cells now can be broken into lines if they are too wide for the window
  * Major performance improvements
  * Several appearance improvements
  * Many additional bug fixes

18.10:
  * Defer any try to change Maxima's configuration until all questions are answered.
  * A menu item that sets the autosubscript feature for the current worksheet.
  * A menu allowing to switch floats to engineering format.
  * Maxima can now pass the values of variables to wxMaxima.
  * Autocompletion for functions from lisp-only packages and for all of maxima's.
    built in functions.
  * A context-sensitive "draw" sidepane.
  * We now allow a packet from Maxima to end in the middle of an unicode codepoint.
  * If the name of a lisp function is known it now is displayed.