@@ -6,6 +6,7 @@ Current:
  * Shipped around a wxWidgets <3.1 bug for embedding bitmaps in svg
  * Many Links were updated to https
  * A better help file detection that still works if there is no .hhp file.
+ * A command-line option that allows to specify the location of maxima.
 
 18.12.0:
   * Use C++'s strong typing for more enums.
